--- a/.gitmodules
+++ b/.gitmodules
@@ -45,3 +45,6 @@
 [submodule "ext/drjit"]
 	path = ext/drjit
 	url = https://github.com/mitsuba-renderer/drjit
+[submodule "ext/tiny-cuda-nn"]
+	path = ext/tiny-cuda-nn
+	url = https://github.com/NVlabs/tiny-cuda-nn.git
